updating the navbar cleaning the unused buttons / text and updating  the product page  component with real data

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -113,7 +113,9 @@
               <ul
                 class="p-2 shadow menu dropdown-content z-[1] bg-base-100 border border-base-200 rounded-box w-52 gap-2"
               >
-                <li><a class="btn btn-sm btn-ghost">Profile</a></li>
+                <li>
+                  <a class="btn btn-sm btn-ghost" href="/profile">Profile</a>
+                </li>
                 <li><a class="btn btn-sm btn-ghost">Setting</a></li>
                 <li>
                   <a class="btn btn-sm btn-error" (click)="logout()">Loggout</a>
