--- a/src/app/Pages/marketplace/marketplace.component.html
+++ b/src/app/Pages/marketplace/marketplace.component.html
@@ -79,20 +79,27 @@
           />
         </figure>
         <div class="card-body p-4">
-          <a
-            [routerLink]="['/product', product.id]"
-            class="text-blue-500 hover:underline"
-          >
-            <h2 class="card-title">
-              {{ product.name }}
-            </h2>
-          </a>
+          <div class="flex flex-col justify-between h-full">
+            <div>
+              <a
+                [routerLink]="['/product', product.id]"
+                class="text-blue-500 hover:underline"
+              >
+                <h2 class="card-title line-clamp-2">
+                  {{ product.name }}
+                </h2>
+              </a>
 
-          <p>{{ product.description }}</p>
-          <p class="text-2xl">{{ product.price }}Dt</p>
-          <div
-            class="card-actions w-full flex justify-center items-center mt-4"
-          >
+              <p class="line-clamp-2 md:line-clamp-3">
+                {{ product.shortDescription }}
+              </p>
+            </div>
+            <div class="text-2xl flex items-end max-h-6 mt-4 ml-1 gap-1">
+              {{ product.price }}
+              <p class="text-sm text-accent">Dt</p>
+            </div>
+          </div>
+          <div class="card-actions w-full flex justify-center items-center">
             <button
               class="btn btn-sm text-primary border-1 border-primary flex-grow"
             >
