creating the list orders and the delivery interfaces

--- a/src/app/BackOfficePages/dashboard/dashboard.component.html
+++ b/src/app/BackOfficePages/dashboard/dashboard.component.html
@@ -44,7 +44,7 @@
           </a>
         </li>
         <li>
-          <a href="dashboard/list-product" class="btn btn-ghost btn-sm w-full">
+          <a href="/dashboard/list-product" class="btn btn-ghost btn-sm w-full">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-6 w-6"
@@ -62,7 +62,7 @@
           </a>
         </li>
         <li>
-          <a routerLink="/orders" class="btn btn-ghost btn-sm w-full">
+          <a href="/dashboard/list-order" class="btn btn-ghost btn-sm w-full">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-6 w-6"
@@ -80,7 +80,7 @@
           </a>
         </li>
         <li>
-          <a routerLink="/customers" class="btn btn-ghost btn-sm w-full">
+          <a href="dashboard/list-order" class="btn btn-ghost btn-sm w-full">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-6 w-6"
