--- a/src/app/BackOfficePages/dashboard/dashboard.component.html
+++ b/src/app/BackOfficePages/dashboard/dashboard.component.html
@@ -80,7 +80,10 @@
           </a>
         </li>
         <li>
-          <a href="dashboard/list-order" class="btn btn-ghost btn-sm w-full">
+          <a
+            href="/dashboard/list-order-delivery"
+            class="btn btn-ghost btn-sm w-full"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-6 w-6"
