--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -59,6 +59,25 @@
               />
             </svg>
           </label>
+          <div class="mt-1">
+            <a class="btn btn-xs" href="/QrScanner">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-6 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 4h6v6H4zM14 4h6v6h-6zM4 14h6v6H4zM14 14h2v2h-2zM18 14h2v2h-2zM16 18h2v2h-2zM18 18h2v2h-2z"
+                />
+              </svg>
+            </a>
+          </div>
+
           <div class="indicator mt-1">
             <span class="indicator-item badge badge-xs badge-secondary">{{
               cartItemCount
