Huge Updates of (3DAYS)

--- a/src/app/BackOfficePages/dashboard/dashboard.component.html
+++ b/src/app/BackOfficePages/dashboard/dashboard.component.html
@@ -101,7 +101,7 @@
           </a>
         </li>
         <li>
-          <a routerLink="/reports" class="btn btn-ghost btn-sm w-full">
+          <a href="/dashboard/categories" class="btn btn-ghost btn-sm w-full">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-6 w-6"
@@ -118,7 +118,7 @@
             </svg>
           </a>
         </li>
-        <li>
+        <!--  <li>
           <a routerLink="/settings" class="btn btn-ghost btn-sm w-full">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -135,7 +135,7 @@
               />
             </svg>
           </a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
