--- a/src/app/Pages/cart/cart.component.html
+++ b/src/app/Pages/cart/cart.component.html
@@ -36,7 +36,7 @@
                 <div class="avatar">
                   <div class="mask mask-squircle w-12 h-12">
                     <img
-                      src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
+                      src="{{ item.product.imageUrl }}"
                       alt="Product Image"
                     />
                   </div>
