--- a/src/app/BackOfficePages/list-product/list-product.component.html
+++ b/src/app/BackOfficePages/list-product/list-product.component.html
@@ -14,7 +14,16 @@
     <tbody>
       @for (product of products; track product) {
       <tr>
-        <td>{{ product.name }}</td>
+        <td class="flex items-center gap-3">
+          <div class="flex items-center gap-3">
+            <div class="avatar">
+              <div class="mask mask-squircle w-12 h-12">
+                <img src="{{ product.imageUrl }}" alt="Product Image" />
+              </div>
+            </div>
+          </div>
+          {{ product.name }}
+        </td>
         <td>{{ product.description }}</td>
         <td>{{ product.price }}</td>
         <td>{{ product.stock }}</td>
