--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="sticky top-0 bg-base-100 z-10">
+<nav class="sticky top-0 bg-base-100 z-10 border-b border-gray-800 border-b-1">
   <div class="mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between h-16">
       <div class="flex items-center">
@@ -11,27 +11,34 @@
         </a>
         <div class="hidden md:block">
           <div class="ml-10 flex items-baseline space-x-4">
-            <a
-              href="/marketplace"
-              class="dark:hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
+            <button
+              [routerLink]="['/marketplace']"
+              class="btn btn-sm btn-ghost"
               routerLinkActive
-              >MarketPlace</a
             >
-            <a
-              href="/product"
-              class="hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
-              >About</a
+              MarketPlace
+            </button>
+            <button
+              [routerLink]="['/']"
+              class="btn btn-sm btn-ghost"
+              routerLinkActive
             >
-            <a
-              href="/"
-              class="hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
-              >Services</a
+              About
+            </button>
+            <button
+              [routerLink]="['/']"
+              class="btn btn-sm btn-ghost"
+              routerLinkActive
             >
-            <a
-              href="/dashboard"
-              class="hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
-              >Dashboard</a
+              Services
+            </button>
+            <button
+              [routerLink]="['/dashboard']"
+              class="btn btn-sm btn-ghost"
+              routerLinkActive
             >
+              Dashboard
+            </button>
           </div>
         </div>
       </div>
@@ -59,6 +66,8 @@
               />
             </svg>
           </label>
+          @if(isLoggedIn){
+
           <div class="mt-1">
             <a class="btn btn-xs" href="/QrScanner">
               <svg
@@ -77,9 +86,38 @@
               </svg>
             </a>
           </div>
-
+          <div class="dropdown dropdown-bottom dropdown-end">
+            <div class="indicator mt-1" tabindex="0" role="button">
+              <button class="btn btn-xs relative">
+                <span class="indicator-item badge badge-xs badge-accent">{{
+                  unreadNotifications
+                }}</span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-4 w-4"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M15 17h5l-1.405-1.405C18.21 14.79 18 13.937 18 13V9a6 6 0 00-5-5.917V3a2 2 0 10-4 0v.083A6 6 0 004 9v4c0 .937-.21 1.79-.595 2.595L2 17h5m6 0a3 3 0 11-6 0h6z"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div
+              tabindex="0"
+              class="dropdown-content z-[1] menu p-2 shadow bg-base-200 rounded-box w-96 max-h-[24rem] overflow-auto"
+            >
+              <app-notification></app-notification>
+            </div>
+          </div>
+          }
           <div class="indicator mt-1">
-            <span class="indicator-item badge badge-xs badge-secondary">{{
+            <span class="indicator-item badge badge-xs badge-accent">{{
               cartItemCount
             }}</span>
 
@@ -150,7 +188,7 @@
           >
           <a
             href="/signup"
-            class="bg-blue-400 hover:bg-blue-600 text-black px-3 py-2 rounded-md text-sm font-medium ml-2"
+            class="bg-accent hover:bg-green-500 text-black px-3 py-2 rounded-md text-sm font-medium ml-2"
             >Sign up</a
           >
           }
