fixing the market place filter section adding loading and resolve issues / problems

--- a/src/app/BackOfficePages/update-product/update-product.component.html
+++ b/src/app/BackOfficePages/update-product/update-product.component.html
@@ -109,7 +109,7 @@
       <input
         type="file"
         id="image"
-        class="input input-bordered w-full"
+        class="file-input file-input-bordered w-full"
         (change)="onFileChange($event)"
       />
     </div>
