--- a/src/app/Pages/product-page/product-page.component.html
+++ b/src/app/Pages/product-page/product-page.component.html
@@ -36,7 +36,7 @@
             >Category :
           </span>
           <span class="text-gray-600 dark:text-gray-300">
-            {{ product.category }}
+            {{ product.category.name }}
           </span>
         </div>
         <!-- 
