--- a/src/app/BackOfficePages/add-product/add-product.component.html
+++ b/src/app/BackOfficePages/add-product/add-product.component.html
@@ -90,7 +90,7 @@
       <input
         type="file"
         id="image"
-        class="input input-bordered w-full"
+        class="file-input file-input-bordered w-full"
         (change)="onFileChange($event)"
         required
       />
