updating the folder / files location making the code better in routing structure

--- a/src/app/Profile/settings/settings.component.html
+++ b/src/app/Profile/settings/settings.component.html
@@ -1,4 +1,4 @@
-<div class="max-w-[60rem] mx-auto p-6 rounded-lg shadow-lg min-h-[38rem]">
+<div class="max-w-[60rem] mx-auto p-6 rounded-lg min-h-[38rem]">
   <h2 class="text-2xl font-semibold mb-4">Settings</h2>
   <!-- Theme Selection -->
   <div class="mb-6">
@@ -54,7 +54,7 @@
 
   <!-- Save Settings Button -->
   <div>
-    <button class="btn btn-primary" (click)="saveSettings()">
+    <button class="btn btn-sm btn-primary" (click)="saveSettings()">
       Save Settings
     </button>
   </div>
