--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="sticky top-0 bg-base-100 z-10 border-b border-gray-800 border-b-1">
+<nav class="sticky top-0 bg-base-200 z-10">
   <div class="mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between h-16">
       <div class="flex items-center">
@@ -42,7 +42,23 @@
           </div>
         </div>
       </div>
-
+      <label
+        class="input input-bordered rounded-lg flex items-center gap-2 w-[33rem] input-sm mx-6"
+      >
+        <input type="text" class="grow" placeholder="Search" />
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 16 16"
+          fill="currentColor"
+          class="w-4 h-4 opacity-70"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
+            clip-rule="evenodd"
+          />
+        </svg>
+      </label>
       <div class="flex items-center">
         <div class="hidden md:flex md:gap-2 md:ml-4">
           <label class="swap swap-rotate">
@@ -173,7 +189,9 @@
                 <li>
                   <a class="btn btn-sm btn-ghost" href="/profile">Profile</a>
                 </li>
-                <li><a class="btn btn-sm btn-ghost">Setting</a></li>
+                <li>
+                  <a class="btn btn-sm btn-ghost" href="/Settings">Setting</a>
+                </li>
                 <li>
                   <a class="btn btn-sm btn-error" (click)="logout()">Loggout</a>
                 </li>
@@ -197,7 +215,7 @@
       <div class="-mr-2 flex md:hidden">
         <button
           type="button"
-          class="bg-gray-800 inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white"
+          class="btn btn-sm btn-primary"
           aria-controls="mobile-menu"
           aria-expanded="false"
           (click)="toggleMobileMenu()"
@@ -227,75 +245,51 @@
     <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
       <a
         href="#"
-        class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium"
+        class="hover:bg-base-300 block px-3 py-2 rounded-md text-base font-medium"
         >Home</a
       >
       <a
         href="#"
-        class="hover:bg-gray-700 block px-3 py-2 rounded-md text-base font-medium"
+        class="hover:bg-base-300 block px-3 py-2 rounded-md text-base font-medium"
         >About</a
       >
       <a
         href="#"
-        class="hover:bg-gray-700 block px-3 py-2 rounded-md text-base font-medium"
+        class="hover:bg-base-300 block px-3 py-2 rounded-md text-base font-medium"
         >Services</a
       >
       <a
         href="#"
-        class="hover:bg-gray-700 block px-3 py-2 rounded-md text-base font-medium"
+        class="hover:bg-base-300 block px-3 py-2 rounded-md text-base font-medium"
         >Dashboard</a
       >
-      <!-- Add more links as needed -->
-      <div class="pt-4 pb-3 border-t border-gray-700">
-        <div class="flex items-center px-5">
-          <div class="flex-shrink-0">
-            <img class="h-6 w-auto" src="../../assets/squi-arrow.png" />
+      <div class="flex items-center px-5">
+        <div class="flex-shrink-0">
+          <img class="h-6 w-auto" src="../../assets/squi-arrow.png" />
+        </div>
+        <div class="ml-3">
+          <div class="text-base font-medium leading-none">User</div>
+          <div class="text-sm font-medium leading-none text-gray">
+            usersxample.com
           </div>
-          <div class="ml-3">
-            <div class="text-base font-medium leading-none text-white">
-              User
-            </div>
-            <div class="text-sm font-medium leading-none text-gray-400">
-              usersxample.com
-            </div>
-          </div>
-          <button
-            class="ml-auto bg-blue-800 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white flex-shrink-0 p-1 rounded-full"
-          >
-            <span class="sr-only">View notifications</span>
-            <svg
-              class="h-6 w-5 text-white"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
-              aria-hidden="true"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M9 5l7 7-7 7"
-              ></path>
-            </svg>
-          </button>
         </div>
       </div>
       <div class="mt-3 px-2 space-y-1">
         <a
-          href="#"
-          class="block px-3 py-2 rounded-md text-base font-medium text-gray-400 hover:bg-gray-700"
+          href="/profile"
+          class="hover:bg-base-300 block px-3 py-2 rounded-md text-base font-medium"
           >Profile</a
         >
         <a
-          href="#"
-          class="block px-3 py-2 rounded-md text-base font-medium text-gray-400 hover:bg-gray-700"
+          href="/Settings"
+          class="hover:bg-base-300 block px-3 py-2 rounded-md text-base font-medium"
           >Settings</a
         >
         <a
           href="#"
-          class="block px-3 py-2 rounded-md text-base font-medium text-gray-400 hover:bg-gray-700"
-          >Sign out</a
+          class="hover:bg-base-300 block px-3 py-2 rounded-md text-base font-medium"
+          (click)="logout()"
+          >Loggout</a
         >
       </div>
     </div>
