--- a/src/app/Profile/settings/settings.component.html
+++ b/src/app/Profile/settings/settings.component.html
@@ -1,61 +1,14 @@
-<div class="max-w-[60rem] mx-auto p-6 rounded-lg min-h-[38rem]">
-  <h2 class="text-2xl font-semibold mb-4">Settings</h2>
-  <!-- Theme Selection -->
-  <div class="mb-6">
-    <label class="block mb-2 font-medium">Theme</label>
-    <div class="flex space-x-4">
-      @for(theme of themes;track theme){
-
-      <label class="flex items-center gap-3">
-        <input
-          type="checkbox"
-          class="checkbox checkbox-sm checkbox-primary"
-          (change)="changeTheme(theme)"
-          [checked]="settings.theme === theme"
-        />
-        {{ theme }}
-      </label>
-      }
-    </div>
+<div class="max-w-[60rem] mx-auto p-2 min-h-[38rem] flex gap-8">
+  <div class="min-h-full border-r border-1 border-gray-800">
+    <ul class="menu w-56">
+      <h2 class="menu-title">Settings</h2>
+      <li><a href="/settings/account">Profile</a></li>
+      <li><a href="/settings/notification"> Notification</a></li>
+      <li><a href="/settings/delivery"> Delivery</a></li>
+      <li><a href="/settings/developer">Developer</a></li>
+    </ul>
   </div>
-
-  <!-- Username Update -->
-  <div class="mb-6">
-    <label class="block mb-2 font-medium">Username</label>
-    <input
-      type="text"
-      [(ngModel)]="settings.username"
-      placeholder="User Name"
-      class="input input-bordered w-full max-w-xs"
-    />
-  </div>
-
-  <!-- Email Update -->
-  <div class="mb-6">
-    <label class="block mb-2 font-medium">Email</label>
-    <input
-      type="email"
-      [(ngModel)]="settings.email"
-      placeholder="User Email"
-      class="input input-bordered w-full max-w-xs"
-    />
-  </div>
-
-  <!-- Change Password -->
-  <div class="mb-6">
-    <label class="block mb-2 font-medium">Change Password</label>
-    <input
-      type="password"
-      [(ngModel)]="settings.password"
-      placeholder="User Password"
-      class="input input-bordered w-full max-w-xs"
-    />
-  </div>
-
-  <!-- Save Settings Button -->
-  <div>
-    <button class="btn btn-sm btn-primary" (click)="saveSettings()">
-      Save Settings
-    </button>
+  <div class="w-full ml-4 mt-6">
+    <router-outlet></router-outlet>
   </div>
 </div>
