update the notification/ navbar UI

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -190,7 +190,9 @@
                   <a class="btn btn-sm btn-ghost" href="/profile">Profile</a>
                 </li>
                 <li>
-                  <a class="btn btn-sm btn-ghost" href="/Settings">Setting</a>
+                  <a class="btn btn-sm btn-ghost" href="/settings/account"
+                    >Setting</a
+                  >
                 </li>
                 <li>
                   <a class="btn btn-sm btn-error" (click)="logout()">Loggout</a>
@@ -281,7 +283,7 @@
           >Profile</a
         >
         <a
-          href="/Settings"
+          href="/Settings/account"
           class="hover:bg-base-300 block px-3 py-2 rounded-md text-base font-medium"
           >Settings</a
         >
