--- a/src/app/Components/notification/notification.component.html
+++ b/src/app/Components/notification/notification.component.html
@@ -13,7 +13,7 @@
   <ul class="flex flex-col gap-2 p-2">
     @for(notification of notifications;track notification){
 
-    <li class="rounded-lg bg-base-300">
+    <li class="rounded-xl bg-base-300 px-4 py-2">
       <div class="flex items-center justify-between">
         <div>
           <p class="text-sm text-gray-500">
