addding the AUTH2 F/B everything is cool

--- a/src/app/Auth/login/login.component.html
+++ b/src/app/Auth/login/login.component.html
@@ -48,7 +48,9 @@
           </div>
         </form>
         <div class="form-control mt-6">
-          <button class="btn btn-accent w-full">Google</button>
+          <button class="btn btn-accent w-full" (click)="signInWithGoogle()">
+            Sign in with Google
+          </button>
         </div>
         <div class="form-control mt-4 text-center">
           <span class="label-text">Don't have an account?</span>
