--- a/src/app/BackOfficePages/dashboard/dashboard.component.html
+++ b/src/app/BackOfficePages/dashboard/dashboard.component.html
@@ -2,11 +2,6 @@
   <div class="bg-base-200 w-20 rounded-box p-4 ml-2 fixed top-20">
     <div>
       <ul class="space-y-6">
-        <!--<li>
-          <a routerLink="/dashboard" class="btn btn-ghost btn-sm w-full">
-            <img class="h-6 w-auto" src="../../../assets/X-line.png" />
-          </a> 
-        </li>-->
         <li>
           <a href="/" class="btn btn-ghost btn-sm w-full">
             <svg
@@ -30,7 +25,7 @@
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-6 w-6"
-              fill="none"
+              fill="currentColor"
               viewBox="0 0 24 24"
               stroke="currentColor"
             >
