--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -14,29 +14,16 @@
             <button
               [routerLink]="['/marketplace']"
               class="btn btn-sm btn-ghost"
-              routerLinkActive
             >
               MarketPlace
             </button>
-            <button
-              [routerLink]="['/']"
-              class="btn btn-sm btn-ghost"
-              routerLinkActive
-            >
+            <button [routerLink]="['/']" class="btn btn-sm btn-ghost">
               About
             </button>
-            <button
-              [routerLink]="['/']"
-              class="btn btn-sm btn-ghost"
-              routerLinkActive
-            >
+            <button [routerLink]="['/']" class="btn btn-sm btn-ghost">
               Services
             </button>
-            <button
-              [routerLink]="['/dashboard']"
-              class="btn btn-sm btn-ghost"
-              routerLinkActive
-            >
+            <button [routerLink]="['/dashboard']" class="btn btn-sm btn-ghost">
               Dashboard
             </button>
           </div>
@@ -209,7 +196,7 @@
           <a
             href="/signup"
             class="bg-accent hover:bg-green-500 text-black px-3 py-2 rounded-md text-sm font-medium ml-2"
-            >Sign up</a
+            >SignUp</a
           >
           }
         </div>
