--- a/src/app/Profile/developer-settings/developer-settings.component.html
+++ b/src/app/Profile/developer-settings/developer-settings.component.html
@@ -2,29 +2,60 @@
 
 <div class="flex items-center py-6 px-4 rounded-lg justify-between bg-base-200">
   <div class="flex items-center gap-2">
-    <div class="bg-base-300 flex items-center justify-center h-10 w-10">X</div>
-    <span>Ready to get started ?</span>
+    <div class="bg-base-300 flex items-center justify-center h-10 w-10">
+      <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+        <path
+          d="M12 2C6.48 2 2 6.48 2 12c0 4.418 2.865 8.166 6.839 9.489.5.091.682-.217.682-.483 0-.237-.008-.866-.013-1.698-2.781.604-3.369-1.342-3.369-1.342-.454-1.155-1.11-1.463-1.11-1.463-.907-.62.069-.607.069-.607 1.002.07 1.53 1.029 1.53 1.029.892 1.529 2.341 1.088 2.91.832.091-.647.35-1.088.635-1.34-2.22-.252-4.555-1.11-4.555-4.943 0-1.091.39-1.983 1.029-2.682-.103-.253-.447-1.27.098-2.645 0 0 .84-.269 2.75 1.026A9.58 9.58 0 0 1 12 6.844a9.55 9.55 0 0 1 2.503.336c1.909-1.295 2.749-1.026 2.749-1.026.545 1.375.202 2.392.1 2.645.64.699 1.029 1.591 1.029 2.682 0 3.841-2.337 4.688-4.566 4.935.36.309.679.92.679 1.852 0 1.336-.012 2.416-.012 2.744 0 .268.18.579.688.481A10.015 10.015 0 0 0 22 12c0-5.52-4.48-10-10-10z"
+        />
+      </svg>
+    </div>
+    <span>Want to know more about the developer?</span>
   </div>
-  <div>
-    <button class="btn btn-sm">View all</button>
-    <button class="btn btn-sm btn-primary">Get access</button>
+  <div class="flex items-center gap-2">
+    <a href="https://github.com/laakri" class="btn btn-sm"> View all </a>
+
+    <a href="https://github.com/laakri" class="btn btn-sm btn-primary">
+      Get access
+    </a>
   </div>
 </div>
+
 <div class="flex justify-between mt-4 gap-4">
   <div class="flex flex-col rounded-lg bg-base-200 p-4">
-    <span>X</span>
-    <span class="text-xl mb-2">Display NFTs in your app </span>
-    <span
-      >Retrieve NFT data, images, and other information from both on and
-      off-chain sources.</span
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 24 24"
+      fill="currentColor"
+      class="w-10 h-10"
     >
+      <path
+        d="M12 2C6.48 2 2 6.48 2 12c0 4.418 2.865 8.166 6.839 9.489.5.091.682-.217.682-.483 0-.237-.008-.866-.013-1.698-2.781.604-3.369-1.342-3.369-1.342-.454-1.155-1.11-1.463-1.11-1.463-.907-.62.069-.607.069-.607 1.002.07 1.53 1.029 1.53 1.029.892 1.529 2.341 1.088 2.91.832.091-.647.35-1.088.635-1.34-2.22-.252-4.555-1.11-4.555-4.943 0-1.091.39-1.983 1.029-2.682-.103-.253-.447-1.27.098-2.645 0 0 .84-.269 2.75 1.026A9.58 9.58 0 0 1 12 6.844a9.55 9.55 0 0 1 2.503.336c1.909-1.295 2.749-1.026 2.749-1.026.545 1.375.202 2.392.1 2.645.64.699 1.029 1.591 1.029 2.682 0 3.841-2.337 4.688-4.566 4.935.36.309.679.92.679 1.852 0 1.336-.012 2.416-.012 2.744 0 .268.18.579.688.481A10.015 10.015 0 0 0 22 12c0-5.52-4.48-10-10-10z"
+      />
+    </svg>
+
+    <span class="text-xl mb-2">Meet the Developer</span>
+    <span
+      >Hi, I'm Laakri, a passionate developer with expertise in web development,
+      focusing on creating high-quality and scalable applications.
+    </span>
   </div>
   <div class="flex flex-col rounded-lg bg-base-200 p-4">
-    <span>X</span>
-    <span class="text-xl mb-2">Display NFTs in your app </span>
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 24 24"
+      fill="currentColor"
+      class="w-10 h-10"
+    >
+      <path
+        d="M8.29289 16.7071C8.68342 17.0976 9.31658 17.0976 9.70711 16.7071C10.0976 16.3166 10.0976 15.6834 9.70711 15.2929L5.41421 11L9.70711 6.70711C10.0976 6.31658 10.0976 5.68342 9.70711 5.29289C9.31658 4.90237 8.68342 4.90237 8.29289 5.29289L3.29289 10.2929C2.90237 10.6834 2.90237 11.3166 3.29289 11.7071L8.29289 16.7071ZM15.7071 5.29289C15.3166 4.90237 14.6834 4.90237 14.2929 5.29289C13.9024 5.68342 13.9024 6.31658 14.2929 6.70711L18.5858 11L14.2929 15.2929C13.9024 15.6834 13.9024 16.3166 14.2929 16.7071C14.6834 17.0976 15.3166 17.0976 15.7071 16.7071L20.7071 11.7071C21.0976 11.3166 21.0976 10.6834 20.7071 10.2929L15.7071 5.29289ZM10.7322 19.5909C10.4773 20.065 9.86616 20.2518 9.39204 19.9969C8.91793 19.742 8.73111 19.1308 8.98604 18.6567L14.986 6.65667C15.2409 6.18255 15.852 5.99573 16.3261 6.25066C16.8002 6.50559 16.987 7.11679 16.7322 7.59091L10.7322 19.5909Z"
+      />
+    </svg>
+
+    <span class="text-xl mb-2">My Projects</span>
     <span
-      >Retrieve NFT data, images, and other information from both on and
-      off-chain sources.</span
+      >Explore my diverse range of projects on GitHub, where I solve real-world
+      problems with innovative solutions. Your feedback is highly
+      appreciated.</span
     >
   </div>
 </div>
