--- a/src/app/BackOfficePages/list-product/list-product.component.html
+++ b/src/app/BackOfficePages/list-product/list-product.component.html
@@ -14,7 +14,7 @@
     <tbody>
       @for (product of products; track product) {
       <tr>
-        <td class="flex items-center gap-3">
+        <td class="flex items-center gap-3 max-w-[15rem]">
           <div class="flex items-center gap-3">
             <div class="avatar">
               <div class="mask mask-squircle w-12 h-12">
@@ -22,9 +22,11 @@
               </div>
             </div>
           </div>
-          {{ product.name }}
+          <span class="line-clamp-2"> {{ product.name }}</span>
         </td>
-        <td>{{ product.description }}</td>
+        <td class="max-w-[15rem]">
+          <span class="line-clamp-2"> {{ product.shortDescription }}</span>
+        </td>
         <td>{{ product.price }}</td>
         <td>{{ product.stock }}</td>
         <td>
