--- a/src/app/Profile/settings/settings.component.html
+++ b/src/app/Profile/settings/settings.component.html
@@ -2,10 +2,66 @@
   <div class="min-h-full border-r border-1 border-gray-800">
     <ul class="menu w-56">
       <h2 class="menu-title">Settings</h2>
-      <li><a href="/settings/account">Profile</a></li>
-      <li><a href="/settings/notification"> Notification</a></li>
-      <li><a href="/settings/delivery"> Delivery</a></li>
-      <li><a href="/settings/developer">Developer</a></li>
+      <li>
+        <a href="/settings/account">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+            class="w-4 h-4"
+          >
+            <path
+              d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
+            />
+          </svg>
+          Profile
+        </a>
+      </li>
+      <li>
+        <a href="/settings/notification">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+            class="w-4 h-4"
+          >
+            <path
+              d="M12 22c1.1 0 2-.9 2-2H10c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5S10.5 3.17 10.5 4v.68C7.63 5.36 6 7.92 6 11v5l-1.5 1.5V19h15v-1.5L18 16z"
+            />
+          </svg>
+          Notification
+        </a>
+      </li>
+      <li>
+        <a href="/settings/delivery">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+            class="w-4 h-4"
+          >
+            <path
+              d="M21 11H6.83l5.59-5.59L11 4l-8 8 8 8 1.41-1.41L6.83 13H21z"
+            />
+          </svg>
+          Delivery
+        </a>
+      </li>
+      <li>
+        <a href="/settings/developer">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+            class="w-4 h-4"
+          >
+            <path
+              d="M8.29289 16.7071C8.68342 17.0976 9.31658 17.0976 9.70711 16.7071C10.0976 16.3166 10.0976 15.6834 9.70711 15.2929L5.41421 11L9.70711 6.70711C10.0976 6.31658 10.0976 5.68342 9.70711 5.29289C9.31658 4.90237 8.68342 4.90237 8.29289 5.29289L3.29289 10.2929C2.90237 10.6834 2.90237 11.3166 3.29289 11.7071L8.29289 16.7071ZM15.7071 5.29289C15.3166 4.90237 14.6834 4.90237 14.2929 5.29289C13.9024 5.68342 13.9024 6.31658 14.2929 6.70711L18.5858 11L14.2929 15.2929C13.9024 15.6834 13.9024 16.3166 14.2929 16.7071C14.6834 17.0976 15.3166 17.0976 15.7071 16.7071L20.7071 11.7071C21.0976 11.3166 21.0976 10.6834 20.7071 10.2929L15.7071 5.29289ZM10.7322 19.5909C10.4773 20.065 9.86616 20.2518 9.39204 19.9969C8.91793 19.742 8.73111 19.1308 8.98604 18.6567L14.986 6.65667C15.2409 6.18255 15.852 5.99573 16.3261 6.25066C16.8002 6.50559 16.987 7.11679 16.7322 7.59091L10.7322 19.5909Z"
+            />
+          </svg>
+          Developer</a
+        >
+      </li>
     </ul>
   </div>
   <div class="w-full ml-4 mt-6">
