--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -188,16 +188,8 @@
             </details>
           </div>
           } @else{
-          <a
-            href="/login"
-            class="light: hover:bg-gray-700 light: px-3 py-2 rounded-md text-sm font-medium"
-            >Login</a
-          >
-          <a
-            href="/signup"
-            class="bg-accent hover:bg-green-500 text-black px-3 py-2 rounded-md text-sm font-medium ml-2"
-            >SignUp</a
-          >
+          <a href="/login" class="btn btn-sm btn-ghost mx-2">Login</a>
+          <a href="/signup" class="btn btn-sm btn-primary">SignUp</a>
           }
         </div>
       </div>
